--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6611,6 +6611,23 @@
   langid = {english}
 }
 
+@article{simpragaVerticalCanopyGradient2013a,
+  title = {Vertical Canopy Gradient in Photosynthesis and Monoterpenoid Emissions: {{An}} Insight into the Chemistry and Physiology Behind},
+  shorttitle = {Vertical Canopy Gradient in Photosynthesis and Monoterpenoid Emissions},
+  author = {Šimpraga, M. and Verbeeck, H. and Bloemen, J. and Vanhaecke, L. and Demarcke, M. and Joó, E. and Pokorska, O. and Amelynck, C. and Schoon, N. and Dewulf, J. and Van Langenhove, H. and Heinesch, B. and Aubinet, M. and Steppe, K.},
+  date = {2013-12-01},
+  journaltitle = {Atmospheric Environment},
+  volume = {80},
+  pages = {85--95},
+  issn = {1352-2310},
+  doi = {10.1016/j.atmosenv.2013.07.047},
+  url = {https://www.sciencedirect.com/science/article/pii/S1352231013005785},
+  urldate = {2021-04-02},
+  abstract = {It is well known that vertical canopy gradients and varying sky conditions influence photosynthesis (Pn), specific leaf area (SLA), leaf thickness (LT) and leaf pigments (lutein, â-carotene and chlorophyll). In contrast, little is known about these effects on monoterpenoid (MT) emissions. Our study examines simultaneously measured Pn, MT emissions and the MT/Pn ratio along the canopy of an adult European beech tree (Fagus sylvatica L.) in natural forest conditions. Dynamic branch enclosure systems were used at four heights in the canopy (7, 14, 21 and 25~m) in order to establish relationships and better understand the interaction between Pn and MT emissions under both sunny and cloudy sky conditions. Clear differences in Pn, MT emissions and the MT/Pn ratio were detected within the canopy. The highest Pn rates were observed in the sun leaves at 25~m due to the higher intercepted light levels, whereas MT emissions (and the MT/Pn ratio) were unexpectedly highest in the semi-shaded leaves at 21~m. The higher Pn rates and, apparently contradictory, lower MT emissions in the sun leaves may be explained by the hypothesis of Owen and Peñuelas (2005), stating synthesis of more photo-protective carotenoids may decrease the emissions of volatile isoprenoids (including MTs) because they both share the same biochemical precursors. In addition, leaf traits like SLA, LT and leaf pigments clearly differed with height in the canopy, suggesting that the leaf's physiological status cannot be neglected in future research on biogenic volatile organic compounds (BVOCs) when aiming at developing new and/or improved emission algorithms.},
+  keywords = {Beech,Carotenoids,Monoterpenoids,Photosynthesis,Sun and shade leaves,Vertical canopy gradient,Volatiles},
+  langid = {english}
+}
+
 @incollection{slotEffectsRisingTemperature2016,
   title = {The {{Effects}} of {{Rising Temperature}} on the {{Ecophysiology}} of {{Tropical Forest Trees}}},
   booktitle = {Tropical {{Tree Physiology}}: {{Adaptations}} and {{Responses}} in a {{Changing Environment}}},
