--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -670,6 +670,7 @@
   urldate = {2021-04-04},
   abstract = {With climate change, heat waves are becoming increasingly frequent, intense, and broader in spatial extent. However, while lethal effects of heat waves on humans are well documented, the impacts on flora are less well understood, perhaps except for crops. We summarize recent findings related to heat wave impacts including: sub-lethal and lethal effects at leaf and plant scales, secondary ecosystem effects, and more complex impacts such as increased heat wave frequency across all seasons, and interactions with other disturbances. We propose generalizable practical trials to quantify the critical bounding conditions of vulnerability to heat waves. Collectively, plant vulnerabilities to heat waves appear to be underappreciated and understudied, particularly with respect to understanding heat-wave driven plant die-off and ecosystem tipping points.},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/nph.17348},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BC5WC3BV\\Breshears et al. - Underappreciated plant vulnerabilities to heat wav.pdf;C\:\\Users\\Me\\Zotero\\storage\\RDGLML34\\nph.html},
   keywords = {climate change,die-off,drought,extreme events,heat waves,mortality,warming},
   langid = {english},
   number = {n/a}
@@ -1359,46 +1360,6 @@
   number = {1}
 }
 
-@article{davisMicroclimaticBufferingForests2019a,
-  title = {Microclimatic Buffering in Forests of the Future: The Role of Local Water Balance},
-  shorttitle = {Microclimatic Buffering in Forests of the Future},
-  author = {Davis, Kimberley T. and Dobrowski, Solomon Z. and Holden, Zachary A. and Higuera, Philip E. and Abatzoglou, John T.},
-  date = {2019},
-  journaltitle = {Ecography},
-  volume = {42},
-  pages = {1--11},
-  issn = {1600-0587},
-  doi = {10.1111/ecog.03836},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecog.03836},
-  urldate = {2020-08-18},
-  abstract = {Forest canopies buffer climate extremes and promote microclimates that may function as refugia for understory species under changing climate. However, the biophysical conditions that promote and maintain microclimatic buffering and its stability through time are largely unresolved. We posited that forest microclimatic buffering is sensitive to local water balance and canopy cover, and we measured this effect during the growing season across a climate gradient in forests of the northwestern United States (US). We found that forest canopies buffer extremes of maximum temperature and vapor pressure deficit (VPD), with biologically meaningful effect sizes. For example, during the growing season, maximum temperature and VPD under at least 50\% forest canopy were 5.3°C and 1.1 kPa lower on average, respectively, compared to areas without canopy cover. Canopy buffering of temperature and vapor pressure deficit was greater at higher levels of canopy cover, and varied with water balance, implying that buffering effects are subject to changes in local hydrology. We project changes in the water balance for the mid-21st century and predict how such changes may impact the ability of western US forests to buffer climate extremes. Our results suggest that some forests will lose their capacity to buffer climate extremes as sites become increasingly water limited. Changes in water balance combined with accelerating canopy losses due to increases in the frequency and severity of disturbance will create potentially non-linear changes in the microclimate conditions of western US forests.},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.03836},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\6AA8WSLX\\Davis et al. - 2019 - Microclimatic buffering in forests of the future .pdf},
-  keywords = {climate extreme,microclimate buffering,water balance},
-  langid = {english},
-  number = {1}
-}
-
-@article{davisMicroclimaticBufferingForests2019b,
-  title = {Microclimatic Buffering in Forests of the Future: The Role of Local Water Balance},
-  shorttitle = {Microclimatic Buffering in Forests of the Future},
-  author = {Davis, Kimberley T. and Dobrowski, Solomon Z. and Holden, Zachary A. and Higuera, Philip E. and Abatzoglou, John T.},
-  date = {2019},
-  journaltitle = {Ecography},
-  volume = {42},
-  pages = {1--11},
-  issn = {1600-0587},
-  doi = {10.1111/ecog.03836},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecog.03836},
-  urldate = {2020-08-18},
-  abstract = {Forest canopies buffer climate extremes and promote microclimates that may function as refugia for understory species under changing climate. However, the biophysical conditions that promote and maintain microclimatic buffering and its stability through time are largely unresolved. We posited that forest microclimatic buffering is sensitive to local water balance and canopy cover, and we measured this effect during the growing season across a climate gradient in forests of the northwestern United States (US). We found that forest canopies buffer extremes of maximum temperature and vapor pressure deficit (VPD), with biologically meaningful effect sizes. For example, during the growing season, maximum temperature and VPD under at least 50\% forest canopy were 5.3°C and 1.1 kPa lower on average, respectively, compared to areas without canopy cover. Canopy buffering of temperature and vapor pressure deficit was greater at higher levels of canopy cover, and varied with water balance, implying that buffering effects are subject to changes in local hydrology. We project changes in the water balance for the mid-21st century and predict how such changes may impact the ability of western US forests to buffer climate extremes. Our results suggest that some forests will lose their capacity to buffer climate extremes as sites become increasingly water limited. Changes in water balance combined with accelerating canopy losses due to increases in the frequency and severity of disturbance will create potentially non-linear changes in the microclimate conditions of western US forests.},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.03836},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\EUX5JIYS\\Davis et al. - 2019 - Microclimatic buffering in forests of the future .pdf;C\:\\Users\\Me\\Zotero\\storage\\3XTPH4VM\\ecog.html},
-  keywords = {climate extreme,microclimate buffering,water balance},
-  langid = {english},
-  number = {1}
-}
-
 @article{de_frenne_global_2019,
   title = {Global Buffering of Temperatures under Forest Canopies},
   author = {De Frenne, Pieter and Zellweger, Florian and Rodríguez-Sánchez, Francisco and Scheffers, Brett R. and Hylander, Kristoffer and Luoto, Miska and Vellend, Mark and Verheyen, Kris and Lenoir, Jonathan},
@@ -2008,6 +1969,12 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\8EV9NV3N\\23-9-577.pdf},
   langid = {english},
   number = {9}
+}
+
+@online{ForestMicroclimatesClimate,
+  title = {Forest Microclimates and Climate Change: {{Importance}}, Drivers and Future Research Agenda - {{De Frenne}} - - {{Global Change Biology}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/gcb.15569},
+  urldate = {2021-04-04}
 }
 
 @article{franklinShadeAvoidance2008,
