--- a/tables.Rmd
+++ b/tables.Rmd
@@ -40,7 +40,7 @@ kable(traits_table, caption = "Table 1. Summary of observed variation in thermal
 
 \newpage
 
-```{r eval = TRUE, echo=FALSE, warning=FALSE}
+```{r eval = FALSE, echo=FALSE, warning=FALSE}
 library(knitr)
 library(kableExtra)
 metabolism_table <- read.csv("Lit_Review/metabolism_table.csv", stringsAsFactors = FALSE, check.names = FALSE)
