--- a/tables.Rmd
+++ b/tables.Rmd
@@ -40,11 +40,11 @@ kable(traits_table, caption = "Table 1. Summary of observed variation in thermal
 
 \newpage
 
-```{r eval = FALSE, echo=FALSE, warning=FALSE}
+```{r eval = T, echo=FALSE, warning=FALSE}
 library(knitr)
 library(kableExtra)
 metabolism_table <- read.csv("Lit_Review/metabolism_table.csv", stringsAsFactors = FALSE, check.names = FALSE)
-kable(metabolism_table, caption = "Table 2. Summary of observed variation in leaf metabolism and thermal responses across the vertical gradient and/or between sun and shade leaves", format = "latex", booktabs = TRUE,  escape = F)%>%
+kable(metabolism_table, caption = "Table 2. Summary of observed variation in leaf metabolism and thermal responses across the vertical gradient and/or between sun and shade leaves", format = "latex", booktabs = TRUE, longtable = TRUE,  escape = F)%>%
   column_spec(1, width = "6cm") %>%
   column_spec(2, width = "2cm") %>%
   column_spec(6, width = "4cm") %>%
@@ -52,7 +52,7 @@ kable(metabolism_table, caption = "Table 2. Summary of observed variation in lea
   pack_rows("Photosynthesis", 8, 20, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
   pack_rows("Respiration", 21, 28, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
   pack_rows("VOC production", 29, 30, latex_gap_space = "1em", colnum = 1, hline_before = FALSE) %>%
-  kable_styling(latex_options = c("scale_down", "hold_position"), protect_latex = T) 
+  kable_styling(latex_options =c("repeat_header"), protect_latex = T, font_size = 7)
   #NOTE: REFERENCES for this table need to go in the nocite section of header in the main doc!!!
 ```
 *composite climatic stress variable from canopy temperature, vapour pressure deficit, and relative humidity is higher in lower canopy
