updated leaf energy balance figure in manuscript
@NidhiVinod , FYI. Let's always save the latest version of this figure as leaf_energy_balance.png.  I've deleted older placeholder versions.

#6

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -238,7 +238,7 @@ $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated ba
 Leaf traits are influenced by biophysical environment in order to maintain metabolic optima so that the amount of carbon assimilated by a leaf throughout its life span is greater than the total carbon invested in the leaf [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020] 
 The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of radiation input versus heat lost to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) stomatal conductance ($g_s$), and (d) leaf width.** Schematic produced using the tealeaves R package of @muir_tealeaves_2019. Current placeholder uses typical conditions for Harvard Forest, but model output deviates from real data (directions right, but Tleaf-Tair too high). [ISSUE #6](2020_12_draft).](leaf_energy_balance/2020_12_draft.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus XXX*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
 Shaded understory leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. 
