--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -142,18 +142,18 @@ We focus on five key themes (Fig. `r fig_schematic`):
 
 **The biophysical environment across the vertical gradient from the forest floor to the the top of the canopy is in large part determined by the structure of the forest itself.** 
 Here, we define the biophysical environment to include the physical structure of the vegetation and associated physical conditions.
-In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from the U.S. National Ecological Observatory Network [NEON; Appendix `r appendix_NEON_methods`; Schimel et al. 2007].
+In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from the U.S. National Ecological Observatory Network [NEON; Appendix `r appendix_NEON_methods`, Schimel et al. 2007].
 
 ### Foliage density
 **Canopy foliage, which is vertically structured in correspondence with the size, structure of trees in the forest, acts as the primary physical barrier between the atmosphere and the forest floor, producing a buffering effect on multiple aspects of the understory conditions (Fig. `r fig_NEON_vertical`).**
 Leaf area density.... *description of most common vertical pattern (@bonan_ecological_2016 reviews this and points to appropriate references)*
 Vertical profiles in leaf area density vary across forests, being... *summarize some key differences across forest types* (REFS), and are altered (*HOW?*) following disturbance [e.g., @parkerCanopyLightTransmittance2002 ; @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020].
 They also vary seasonally, ... (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). 
-*(can we say that there is more loss of leaves higher in the profile during cold/ drought dormant seasons? )*
+In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size claasses (Condit, Meakem, ?any work on this in temperate forests??).
 In this review, we focus primarily on growing season conditions, including leaf phenology at the edges of the growing season, but excluding periods when no leaves are present in deciduous forests.
 
 
-![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for 5/6 sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion light incidence, (c) proportion sun leaves, and July mean ± 1 standard deviation for (d) maximum photosyntehtically active ratiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. All variables are normalized relative to the height of the top of the canopy (**DETAILS**) and the conditions at the point of lowest measurement.   ([issue 20](https://github.com/EcoClimLab/vertical-thermal-review/issues/20)) ](NEON_height_profiles/figures/profile_all.png)
+![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion light incidence, (c) proportion sun leaves, and July mean ± 1 standard deviation for (d) maximum photosyntehtically active ratiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawaii; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV).  ([issue 20](https://github.com/EcoClimLab/vertical-thermal-review/issues/20)) ](NEON_height_profiles/figures/profile_all.png)
 
 ### Light environments
 
