--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -717,6 +717,12 @@
   number = {5}
 }
 
+@online{CanopyStructureTopography,
+  title = {Canopy Structure and Topography Jointly Constrain the Microclimate of Human‐modified Tropical Landscapes - {{Jucker}} - 2018 - {{Global Change Biology}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.14415},
+  urldate = {2021-04-06}
+}
+
 @article{caoLeafAnatomyChlorophyll2000,
   title = {Leaf Anatomy and Chlorophyll Content of 12 Woody Species in Contrasting Light Conditions in a {{Bornean}} Heath Forest},
   author = {Cao, Kun-Fang},
@@ -2658,6 +2664,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\MDGNDCWG\\Jiao-jun et al. - 2004 - Wind profiles in and over trees.pdf},
   langid = {english},
   number = {4}
+}
+
+@article{juckerCanopyStructureTopography2018,
+  title = {Canopy Structure and Topography Jointly Constrain the Microclimate of Human-Modified Tropical Landscapes},
+  author = {Jucker, Tommaso and Hardwick, Stephen R. and Both, Sabine and Elias, Dafydd M. O. and Ewers, Robert M. and Milodowski, David T. and Swinfield, Tom and Coomes, David A.},
+  date = {2018},
+  journaltitle = {Global Change Biology},
+  volume = {24},
+  pages = {5243--5258},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.14415},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.14415},
+  urldate = {2021-04-06},
+  abstract = {Local-scale microclimatic conditions in forest understoreys play a key role in shaping the composition, diversity and function of these ecosystems. Consequently, understanding what drives variation in forest microclimate is critical to forecasting ecosystem responses to global change, particularly in the tropics where many species already operate close to their thermal limits and rapid land-use transformation is profoundly altering local environments. Yet our ability to characterize forest microclimate at ecologically meaningful scales remains limited, as understorey conditions cannot be directly measured from outside the canopy. To address this challenge, we established a network of microclimate sensors across a land-use intensity gradient spanning from old-growth forests to oil-palm plantations in Borneo. We then combined these observations with high-resolution airborne laser scanning data to characterize how topography and canopy structure shape variation in microclimate both locally and across the landscape. In the processes, we generated high-resolution microclimate surfaces spanning over 350 km2, which we used to explore the potential impacts of habitat degradation on forest regeneration under both current and future climate scenarios. We found that topography and vegetation structure were strong predictors of local microclimate, with elevation and terrain curvature primarily constraining daily mean temperatures and vapour pressure deficit (VPD), whereas canopy height had a clear dampening effect on microclimate extremes. This buffering effect was particularly pronounced on wind-exposed slopes but tended to saturate once canopy height exceeded 20 m—suggesting that despite intensive logging, secondary forests remain largely thermally buffered. Nonetheless, at a landscape-scale microclimate was highly heterogeneous, with maximum daily temperatures ranging between 24.2 and 37.2°C and VPD spanning two orders of magnitude. Based on this, we estimate that by the end of the century forest regeneration could be hampered in degraded secondary forests that characterize much of Borneo's lowlands if temperatures continue to rise following projected trends.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.14415},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\6BJ7LIMU\\Jucker et al. - 2018 - Canopy structure and topography jointly constrain .pdf;C\:\\Users\\Me\\Zotero\\storage\\J974655Z\\gcb.html},
+  keywords = {canopy height,digital elevation model,forest degradation and fragmentation,LiDAR,near-surface air temperature,remote sensing,selective logging,vapour pressure deficit},
+  langid = {english},
+  number = {11}
 }
 
 @article{jungWaterUseWarmtemperate2013,
