--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,7 +110,7 @@ In the meantime, our findings imply that while large canopy trees are the most v
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen # $^\circ$C since YEAR and are expected to rise an additional #-#$^\circ$C by YEAR (IPCC REF), accompanied by increasing severity and frequency of heat waves [@perkinsIncreasingFrequencyIntensity2012] and hotter droughts [*Trenberth et al. 2014*].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function (REFS; IPBES report), including altered rates of photosynthesis and respiration [REFS], foliar damage during heat waves [*O'Sullivan et al. 2017*], and reduced growth and elevated mortality during drought [REFS].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function (@breshearsUnderappreciatedPlantVulnerabilities; IPBES report), including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities], foliar damage during heat waves [*O'Sullivan et al. 2017*], and reduced growth and elevated mortality during drought [REFS].
 Individually or in combination, these changes have the potential to reduce forest C sequestration, as may already be occurring in some forests [REFS; @sullivanLongtermThermalSensitivity2020]. 
 The resulting feedbacks to the climate system (e.g., decreased C storage, altered albedo and hydrology) will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016, Bonan 2008], yet this influence remains extremely uncertain [REFS].
  
@@ -149,7 +149,7 @@ In this section, we supplement a review of the existing literature with a new an
 Leaf area density.... *description of most common vertical pattern (@bonan_ecological_2016 reviews this and points to appropriate references)*
 Vertical profiles in leaf area density vary across forests, being... *summarize some key differences across forest types* (REFS), and are altered (*HOW?*) following disturbance [e.g., @parkerCanopyLightTransmittance2002 ; @almeidaContrastingFireDamage2016 ; @starkReframingTropicalSavannization2020].
 They also vary seasonally, ... (Parker & Tibbs 2004; @smithSeasonalDroughtrelatedChanges2019 ; @parkerConsequencesEnvironmentalHeterogeneity2019). 
-In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size claasses (Condit, Meakem, ?any work on this in temperate forests??).
+In mixed deciduous- evergreen broadleaf forests, the fraction of deciduous trees tends to increase across tree size classes (Condit, Meakem, ?any work on this in temperate forests??).
 In this review, we focus primarily on growing season conditions, including leaf phenology at the edges of the growing season, but excluding periods when no leaves are present in deciduous forests.
 
 
@@ -158,33 +158,29 @@ In this review, we focus primarily on growing season conditions, including leaf 
 ### Light environments
 
 **Light conditions, specifically changes in the proportion of incident light and photosynthetically active radiation (PAR), vary along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Fig. `r fig_NEON_vertical`; @koike_leaf_2001].** 
-Generally, upper canopies in dense forests are exposed to greater PAR values and limit light penetration to canopy interiors, lower canopy layers, and the understory. Shaded regions experience lower values of PAR with different light quality [in ranges of blue, orange and red]. 
-The light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @niinemetsPackingPhotosyntheticMachinery2009; @poorterMetaanalysisPlantResponses2019b].
+Generally, along a vertical gradient in forests globally, amount of light decreases from canopy tops to the forest floor. Foliage density mediates light regime, where denser upper canopies exposed to greater PAR values limit light to canopy interiors, lower canopy layers, and the understory. 
+This light gradient is more pronounced under broadleaf forests than needleleaf forests [Fig. `r fig_NEON_vertical`; @lowmanForestCanopies1995; @aussenacInteractionsForestStands2000a; @niinemetsPackingPhotosyntheticMachinery2009; @poorterMetaanalysisPlantResponses2019b].
 
-In heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy [to X?] is a better proxy for light environment than height (Parker 1995). Lower canopy light environments are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]
+The amount of light reaching lower canopy, understories and forest floors are highly variable, ranging from high light gaps to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. Forest floors of tropical forests with densely packed overstory trees, receive approximately 1-2% of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]. Small canopy gaps and wind-induced movement of canopy leaves and branches also contribute to the light environment of shaded forest regions, in the form of sunflecks. Shaded canopy layers depend on sunflecks where receive 10-80% of their photon flux density for photosynthesis in short bursts within minutes of light exposure [@waySunflecksTreesForests2012]. Additionally, in heterogeneous canopies [with high gap fractions and large variation in tree height], the distance from the outer canopy in inner canopy is a better proxy for light environment than height (Parker 1995).
 
-Tropical forests with densely packed overstory trees limit light reaching subsequent canopy layers and forest understories. Tropical forest floors receive approximately 1-2%  of the incident light that hits the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and northern temperate forest floors receive around 4-5% of full sunlight [@bartemucciOverstoryInfluencesLight2006]. However, vertical canopy layers and forest floors also receive light permeating through canopy gaps, as well as intermittent light penetration from tree, branch, and leaf movement caused by wind, defined collectively as sunflecks. Sunflecks can provide 10-80% of photon flux density for photosynthesis in canopy layers and understory, depending on canopy attributes such as foliage density, height and architecture [@waySunflecksTreesForests2012]
-
-This difference in light regimes along a vertical profile is an important driver of plasticity in leaf traits, leaf physiology, adaptation, and thermal sensitivity. Leaves thus exhibit variation in leaf trait adaptations from sun to shade both along a vertical intra-canopy gradient, as well as inter-canopy [@michaletzEnergeticCarbonEconomic2016; @fauset_differences_2018; @niinemetsResponsesForestTrees2010; @sackHowStrongIntracanopy2006; @niinemetsControversyTraitsConferring2006; Osnas et al. 2018].  
-
--	Sunflecks: Leaky et al. 2003--from Marielle, "This is another, higher resolution axis of the variability of microenvironments that is probably quite important to address. (Also see the papers by Robin Chazdon on temporal variability of light environments). Maybe we will want to add these sentences (above) and something about sunflecks to a separate section that specifically addresses sources of variation in forest structure & microenvironments (e.g., vertical, horizontal, seasonal, diurnal, and with disturbance)?"
+These light regimes shape foliage at a vertical gradient, which in turn shapes the microenvironment. At a foliar level, resulting light-adaptation in the form of sun and shade leaf dichotomy also facilitates plant-adaptation to the light environment in the understory and overstory, ultimately contributing to shaping the microenvironment, forest vertical-profile's thermal sensitivity and their response to warming [@michaletzEnergeticCarbonEconomic2016; @fauset_differences_2018; @niinemetsResponsesForestTrees2010; @sackHowStrongIntracanopy2006; @niinemetsControversyTraitsConferring2006] 
 
 ### Wind speeds 
 **Wind speeds are also higher at the top of the canopy (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`), owing to... [**REFS**].**
-Across all **#** forested NEON sites, wind speeds increased with height, with daily maximum wind speeds at the top of the averaging up to **#** m s^-1^ higher at the top of the vertical profile than at the bottom. 
+Across all **#** forested NEON sites, wind speeds increased with height, with daily maximum wind speeds at the top of the averaging up to **#** m s^-1^ higher at the top of the vertical profile than at the bottom. Increase in tree height also contributes to decrease in understory wind-speed [@CanopyStructureTopography]
 Consistent with these results from NEON sites, higher wind speeds at greater heights within a forest canopy have been observed in both closed canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019].
 
 ### Air temperature 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
-Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019], and recent evidence shows a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a] and in the northwestern United States [@davis_microclimatic_2019]. Intact tropical forests have also been show to exhibit lower peak daytime $T_{air}$ than neighboring tree crop agricultural plantations (S. R. Hardwick et al., The relationship between leaf area index and microclimate in tropical forest and oil palm plantation: Forest disturbance drives changes in microclimate. Agric. Meteorol. 201, 187–195 (2015)). Even though canopy cover buffers maximum air temperatures in the understory, inevitable increases in understory temperatures continue to be observed as a result of global temperature increases. However, the buffering by canopy cover smooths this warming in the understory, thereby exhibiting an understory temperature lag [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020;@rollinsonClimateSensitivityUnderstory]
+Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The capacity to moderate diurnal temperature fluctuations differs among forests with varying canopy structure, crown density, and seasonality. Tropical, temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures relative to pine and boreal forests. Increases in crown density and leaf area index decrease light and higher maximum temperature permeability into the forest understory, thus maintaining lower maximum daytime temperatures. Comparatively open forests such as pine forests with sparse stands (stems?) resulting in decreased buffering capacity in the understory and air temperatures more similar to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reversed during the night, however, with open-canopy pine forests maintaining warmer understory temperatures than above canopy [@vonarxSpatiotemporalEffectsForest2012a] 
+The strength of this buffering varies across forests, and increases with canopy cover, leaf area index ($LAI$) and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower daytime maximum temperature and vapor pressure deficit ($VPD$), and warmer higher nighttime minimum temperature in the understory, respectively, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, Defrenne et al. 2021, @davis_microclimatic_2019, @zellweger_seasonal_2019]. In comparison to neighboring tree crop agricultural plantations, intact tropical forests also maintain lower peak daytime $T_{air}$ and $VPD$ [S. R. Hardwick et al. 2015, Junker et al. 2018]. Pine forests, on the other hand, that are open-forests with lower $LAI$ and sparse stands have lower buffering capacity, thus maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a]. These pine forests have also been observed to maintain warmer nighttime understory temperatures than above canopy, due to radiative heat loss from the soil, caused by daytime solar radiation [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature. However, beyond a certain height, temperature and VPD offset plateaus [Junker et al. 2018]. At a species level, broadleaf trees with higher shade casting ability also contribute to greater temperature buffering [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a].
 
-During the wet season, maximum air temperatures have been shown to be higher above forest canopies than below in tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017]. Similarly, in these studies, maximum temperatures were higher while humidity was lower in gaps compared to understory regions (both at 1.5 m above the ground, see their Fig. 4 - again illustrating buffering effect of the canopy). However, similar maximum temperatures have been observed during the dry season of a semi-deciduous tropical forest in Panama, partially because in the dry season some canopy trees were leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
+Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with higher maximum air temperatures and relative humidity in above forest canopies and gaps than in below canopies and understories. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
-Minimum $T_{air}$ is also buffered by forest canopies under some conditions.
-Higher minimum temperatures under forest canopies relative to nearby clearings have been observed across Europe [@zellweger_seasonal_2019] and in the northwestern United States [@davis_microclimatic_2019].(Martijn: should we refer to mechanisms at this point? (e.g., greater radiative heat loss in exposed areas resulting in lower Tmin))
-However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
+Under colder conditions (?), minimum T_air is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower T_min. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
+
+Thus, we see that buffering by canopy cover smooths the effect temperature extreme and fluctuation in the understory, thereby exhibiting an understory temperature lag [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020; @rollinsonClimateSensitivityUnderstory]. However, as a result of global rise in temperatures, inevitable increases in understory temperatures are observed. [@bertrandCommentForestMicroclimate2020]
 
 *(Add something about risk of freeze.)* 
 
@@ -193,8 +189,7 @@ However, similar minimum temperatures under forest canopies have been observed i
 - DETAILS - REFS
 - @mcgregor_tree_nodate
 
-Along with temperature, forest canopies moderate relative humidity (RH) in below-canopy microclimates. In three European forest types (Broadleaved, Non-Pine Conifer, Pine), canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
-
+Along with temperature, forest canopies moderate relative humidity (RH) in below-canopy microclimates, which tends to decrease with increasing maximum temperature. In three European forests (Broadleaved, Non-Pine Conifer, Pine), canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
 
 RH, in combination with temperature, determines vapor pressure deficit ($VPD$), an important metric expressing the driving force of water loss from a leaf. Atlantic forests in Brazil during the wet season tend to have higher $T_{air}$, and $VPD$ in the upper canopy and canopy gaps than in the understory where $T_{air}$ and $VPD$ tend to be lower [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017].  
 This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomatal constraints [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
@@ -204,30 +199,14 @@ This means that canopy leaves tend to be exposed to higher *evaporative demand*,
 **Atmopsheric carbon dioxide (CO~2~) concentrations tend to be higher near ground level at night, but largely dissipate during the day [@koike_leaf_2001; @yang_spatial_1999].** 
 Given that differences are small during the day when photosynthesis is occurring, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentrations are unlikely to have much of an effect on the energy balance and metabolism of leaves across the forest vertical gradient.
 
-*ALL OF THE FOLLOWING CONTENT SHOULD BE WORKED INTO RELEVANT PARAGRAPHS EARLIER IN THIS SECTION:*
+### Geographic and climatic factors
 
-
-The strength of this buffering varies across forests, influenced by both forest characteristics and the biophysical environment.
-First, buffering increases with canopy cover and water availability.
-* greater cover --> lower max T and VPD, higher minT  [@davis_microclimatic_2019]
-* greater cover -->  lower max T and light availability [@zellweger_seasonal_2019]
-* [@thom_effects_2020; Tymen et al. 2017 ; Jucker et al. 2018 ; Hardwick et al. 2015] 
-The omega factor (McNaughton and Jarvis, 1983; Jarvis & McNaughton 1986) describes the degree of aerodynamic coupling between the vegetation and the atmospheric boundary layer; the lower the value of omega, the greater the coupling.
-"I wonder whether it would be useful to introduce such 'formal' terms used to describe what is essentially the same as buffering effect of canopies.
-I'd have to read up some more to see if there are papers showing what sort of canopy characteristics influence omega.
-
-https://doi.org/10.1016/S0065-2504(08)60119-1"-M.Slot
-
-*Presumably, buffering would also be affected by canopy roughness, which affects turbulent air flow and the canopy boundary layer.*
-Taller trees don't necessarily increase buffering [@zellweger_seasonal_2019]. "They found that taller forests (which coincided with forests of higher LAI) had lower mean and max values of VPD and temperature" [Jucker, T., Hardwick, S.R., Both, S., Elias, D.M., Ewers, R.M., Milodowski, D.T., Swinfield, T. and Coomes, D.A., 2018. Canopy structure and topography jointly constrain the microclimate of human-modified tropical landscapes. Global change biology, 24(11), pp.5243-5258]
-.See Jucker et al. 2018 - max height was highly correlated to both LAI and surface roughness
-
-Species that have higher shade casting ability such as broadleaved trees increase T buffering [@zellweger_seasonal_2019,@vonarxSpatiotemporalEffectsForest2012]
+*Topography and altitude contribute to the heterogeneity of forest light environment, and thus shape microclimates. Trees in higher altitudes have been observed to adapt their branching to allow for light to pass through subsequent canopy layers.  
+*Canopy structure and topography jointly constrain the microclimate of human-modified tropical landscapes. Global change biology, 24(11), pp.5243-5258] .See *Jucker et al. 2018 - max height was highly correlated to both LAI and surface roughness
 The strength of buffering also varies with respect to geographic and climatic factors.
 * Distance to coast, topographic position, elevation [@zellweger_seasonal_2019]
 * [@davis_microclimatic_2019]--Proximity to riparian areas tends to sustain buffering, protecting understory temperatures even during increasing temperatures [@davis_microclimatic_2019]
 However vertical climate gradients within forests are known to be steeper than those driven by elevation and latitude [@nakamuraForestsTheirCanopies2017; @martinCovarianceSunShade2020a]
-
 
 ## Leaf temperature 
 
